--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.41", features = ["full"] }
+uuid = { version = "1.4", features = ["v4"] }
