--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.41", features = ["full"] }
 uuid = { version = "1.4", features = ["v4"] }
+
+[dev-dependencies]
+regex = "1.11.1"
