Read token duration from .env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ AUTH_USERNAME=""
 AUTH_PASSWORD=""
 PRIVATE_KEY_PATH="keys/jwt_ecdsa_key.pem"
 PUBLIC_KEY_PATH="keys/jwt_ecdsa_key.pub.pem"
+TOKEN_DURATION_MIN=10
