--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15"
 env_logger = "0.11"
 jsonwebtoken = "9.3"
 log = "0.4"
+num = "0.4"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
